* Now with checking that the packages actually install and some of the   commands work.
check-packages.sh: Script to check that the packages all install and remove, and that
  some of the commands work.

opensuse-check.sh: Script to run to check opensuse

opensuse-setup-chroot.sh: Factor out the opensuse-build code to have separate code
  that sets up the chroot; used in both -build and -check

rpm-dump: Factor out the code that dumps the rpms so it can be used in the fedora/centos/scilinux
  chroots since we need working yum to test package installs

control: Add missing useful dependency

debian-localpkgs.sh: Use the -snf form to build the symlink

mock-cfg.pl: Switch to the primary scientific linux mirror -- previous mirror was partial
  and inconsistent.

opensuse-build.sh: Remove the old chroot setup code, use the shared dump code, 
  don't rm all the rpms in the dest dir before copying

opensuse-chroot.sh: Add options to control how we execute, either check or build

rules: Change so that the release date is controlled by a faile and we have a prep-release
  set of code to prepare for a release.  Fix up the sources target to use sudo sometimes
  and not other times.  Switch the generic target to be earlier and to have a check target.
  Add check targets for the 3 different build styles.  Switch to ln -snf to not screw up
  the symlinks.  Fix missing dependency for tesla target.

--- a/debian/control
+++ b/debian/control
@@ -49,7 +49,7 @@ Package: lintel-utils
 Section: utils
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, liblintel0, liblintel-perl,
-  texlive-latex-base, ghostscript 
+  texlive-latex-base, ghostscript, libdigest-sha1-perl
 Description: Miscellaneous utility library - programs
  Lintel is the miscellaneous utility library for shared functions that are
  individually valuable but are not valueable enough to form their own package.
