deptool.in: [BUGFIX] from tarasov@vasily.name; handle CentOS-6.
rules: TOOD to remove my path from the perl generated code.

--- a/src/deptool.in
+++ b/src/deptool.in
@@ -3805,6 +3805,8 @@ sub operatingSystem {
 		$Cache::operating_system = "fedora$1";
 	    } elsif (/^CentOS release (\d+)\b/o) {
 		$Cache::operating_system = "centos$1";
+            } elsif (/^CentOS Linux release (\d+)\b/o) {
+                $Cache::operating_system = "centos$1";
             } else {
                 s/\W/_/go; s/\s/_/go;
                 $Cache::operating_system = "rh-unknown-$_";
