PThread.hpp.in: change SINVARIANT to CHECKED since the call is critical to   correct operation.
jobsfile.pm: Apply fix that if the output filename is already present we skip generating 
  it.  Also use Sys::Hostname to get the hostname since that is more portable.

--- a/include/Lintel/PThread.hpp.in
+++ b/include/Lintel/PThread.hpp.in
@@ -322,7 +322,7 @@ public:
     bool timedWait(PThreadMutex &m, double seconds) { 
         struct timespec abstime;
 
-	SINVARIANT(clock_gettime(CLOCK_REALTIME, &abstime) == 0);
+	CHECKED(clock_gettime(CLOCK_REALTIME, &abstime) == 0, "realtime clock get failed?!");
 	SINVARIANT(seconds >= 0);
 
 	abstime.tv_sec += static_cast<time_t>(floor(seconds));
